<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/black"
    android:fitsSystemWindows="true"
    tools:context=".ui.signup.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp"
        tools:context=".ui.signup.SignUpActivity">

        <!-- Header -->
        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/orbitron"
            android:text="@string/registration_header"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Name section -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/name_label"
            android:textColorHint="@color/cyan"
            app:cursorColor="@color/cyan"
            app:layout_constraintTop_toBottomOf="@+id/header"
            tools:layout_editor_absoluteX="24dp"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeWidth="2dp"
            app:hintTextColor="@color/cyan"
            app:boxStrokeColor="@color/box_stroke_white"
            app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:padding="16dp"
                android:textSize="18sp"
                android:textColor="@color/cyan"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/nameError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/required_input_field_error"
            android:textColor="@color/error"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/nameInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/nameInputLayout" />

        <!-- Surname section -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/surnameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/surname_label"
            android:textColorHint="@color/cyan"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/box_stroke_white"
            app:boxStrokeWidth="2dp"
            app:cursorColor="@color/cyan"
            app:hintTextColor="@color/cyan"
            app:layout_constraintTop_toBottomOf="@+id/nameError"
            tools:layout_editor_absoluteX="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surnameInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/cyan"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/surnameError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/required_input_field_error"
            android:textColor="@color/error"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/surnameInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/surnameInputLayout" />

        <!-- Email section -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/email_label"
            android:textColorHint="@color/cyan"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/box_stroke_white"
            app:boxStrokeWidth="2dp"
            app:cursorColor="@color/cyan"
            app:hintTextColor="@color/cyan"
            app:layout_constraintTop_toBottomOf="@+id/surnameError"
            tools:layout_editor_absoluteX="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColor="@color/cyan"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/emailError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/incorrect_email_error"
            android:textColor="@color/error"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/emailInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/emailInputLayout" />

        <!-- Password section -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/password_label"
            android:textColorHint="@color/cyan"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/box_stroke_white"
            app:boxStrokeWidth="2dp"
            app:cursorColor="@color/cyan"
            app:hintTextColor="@color/cyan"
            app:layout_constraintTop_toBottomOf="@+id/emailError"
            tools:layout_editor_absoluteX="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/cyan"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passwordError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/incorrect_password_error"
            android:textColor="@color/error"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/passwordInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"/>

        <!-- Password confirm section -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/confirm_password_label"
            android:textColorHint="@color/cyan"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/box_stroke_white"
            app:boxStrokeWidth="2dp"
            app:cursorColor="@color/cyan"
            app:hintTextColor="@color/cyan"
            app:layout_constraintTop_toBottomOf="@+id/passwordError"
            tools:layout_editor_absoluteX="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/cyan"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/confirmPasswordError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/incorrect_password_match_error"
            android:textColor="@color/error"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/confirmPasswordInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordInputLayout"/>

        <!-- Login button section -->
        <Button
            android:id="@+id/registerBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/orbitron"
            android:padding="10dp"
            android:text="@string/signup_button_label"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordError" />

        <TextView
            android:id="@+id/loginTextBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/signed_up_label"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>